fix: Video Call Hook에서 일반 변수로 변경

--- a/src/page/videocall/VideoCall.css
+++ b/src/page/videocall/VideoCall.css
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: calc(100% - 150px); /* Adjust to fit other elements */
+  height: calc(100% - 150px);
   box-sizing: border-box;
 }
 
