--- a/src/page/login/login.css
+++ b/src/page/login/login.css
@@ -34,6 +34,7 @@ img {
 .login {
     position: relative;
     height: 100vh;
+    width: 100vw;
     display: grid;
     align-items: center;
 }
@@ -160,6 +161,7 @@ img {
     font-weight: 500;
     cursor: pointer;
     margin-bottom: 2rem;
+    color: black;
 }
 
 .login__register {
