--- a/src/page/main/mainPage.css
+++ b/src/page/main/mainPage.css
@@ -31,6 +31,10 @@ html{
 .line{
     margin-top:50px;
 }
+.main__wrap{
+    width: 100vw;
+    height: 100vh;
+}
 .social{
     width:5%;
     height:100%;
