채널 추가 css 변경

--- a/src/page/main/mainPage.css
+++ b/src/page/main/mainPage.css
@@ -289,3 +289,13 @@ button:hover {
 .plus-button{
     margin-top: 50px;
 }
+
+.channel__plus-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.channel__plus-text {
+    margin-left: 12px;
+}
