--- a/src/page/main/mainPage.css
+++ b/src/page/main/mainPage.css
@@ -294,6 +294,7 @@ button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 10px;
 }
 
 .channel__plus-text {
