--- a/src/page/main/mainPage.css
+++ b/src/page/main/mainPage.css
@@ -81,8 +81,8 @@ html{
 .sub{
     width:100%;
     height:100%;
-    position:absolute;
-    top:3%;
+    /* position:absolute; */
+    /* top:3%; */
 }
 .voice{
     width:17%;
@@ -105,31 +105,6 @@ html{
     background-color:#313338;
     position:relative;
 
-}
-.send-chat{
-    width:95%;
-    height:5%;
-    background-color:#383A40;
-    border-radius:8px;
-
-
-}
-.chat-text{
-    width: 800px;
-    height: 40px;
-    margin-left: 30px;
-    margin-top: 5px;
-}
-.msg-wrap{
-    width:1100px;
-    height:50px;
-    background-color:#383A40;
-    position:absolute;
-    bottom:20px;
-    left:20px;
-}
-.icon{
-    margin-top:7px;
 }
 .profile{
     width:35px;
@@ -171,37 +146,6 @@ html{
     background-repeat: no-repeat;
     background-position: center;
 }
-
-.plus{
-    width:30px;
-    height:30px;
-    background-image: url('../../../public/images/media/plus.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius:20px;
-    margin-left:10px;
-}
-.img{
-    width:30px;
-    height:30px;
-    margin-left:10px;
-    background-image: url('../../../public/images/media/gift.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.send{
-    width:30px;
-    height:30px;
-    margin-left:10px;
-    float:right;
-    margin-right:10px;
-    background-image: url('../../../public/images/media/send.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
 .chat-channal{
     width:30px;
     height:30px;
@@ -221,6 +165,14 @@ html{
     font-size:35px;
     color:#80848E;
     margin-left:18px;
+}
+
+.chat-box {
+    width: 100%;
+    height: calc(100% - 74px);
+    display: flex;
+    flex-direction: column;
+    /* overflow: auto; */
 }
 
 /* 라이브러리 만들어서 반복되는 코드 줄이기*/
@@ -270,44 +222,6 @@ html{
     border-radius: 4px;
 }
 
-/* 제출 버튼 */
-button {
-    background: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background: #0056b3;
-}
-.chat-box{
-    width: 85%;
-    height: 86%;
-    display: flex;
-    flex-direction: column-reverse;
-    overflow: auto;
-}
-
-.timestamp{
-    font-size: 0.8em;
-}
-
-.message{
-    margin-left: 10px;
-}
-
-.message-line{
-    margin: 20px 0px 20px 0px;
-    color: red;
-    border: 1px solid rgba(128, 128, 128, 0.2);
-}
-
-.plus-button{
-    margin-top: 50px;
-}
 
 .channel__plus-container {
     display: flex;
