feat: space 사용자 조회 feat: myspace 조회

--- a/src/page/main/mainPage.css
+++ b/src/page/main/mainPage.css
@@ -289,6 +289,11 @@ button:hover {
     flex-direction: column-reverse;
     overflow: auto;
 }
+.user-list{
+    width: 15%;
+    height: 86%;
+    background-color: #2B2D31;
+}
 
 .timestamp{
     font-size: 0.8em;
