--- a/src/component/textchat/textChat.css
+++ b/src/component/textchat/textChat.css
@@ -7,7 +7,7 @@
 
 .message p {
   margin-top: 5px;
-  width: 99%;
+  /* width: 99%; */
 }
 
 .timestamp{
@@ -33,6 +33,19 @@
   margin: 20px 0 20px 0;
   color: red;
   border: 1px solid rgba(128, 128, 128, 0.2);
+}
+
+.message-info{
+  display: flex;
+  justify-content: space-between;
+}
+
+.message-info .right{
+  margin-right: 14px;
+}
+
+.right:hover{
+  background-color: #4d4f55;
 }
 
 .preview-img{
@@ -82,20 +95,18 @@
 }
 
 .msg-wrap{
-  width:99%;
-  margin-left: 10px;
-  padding: 10px;
-  background-color: #383A40;
+  /* width:99%; */
+  /* margin-left: 10px; */
+  padding: 0 10px;
+  /* background-color: #383A40; */
   z-index: 5;       /* 다른 요소들 위에 위치하도록 설정 */
   display: flex;
   flex-direction: column;  /* 세로 방향으로 배치 */
   justify-content: center;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 .send-chat{
-    width:100%;
-    height:40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,7 +118,7 @@
 .chat-text{
   /* width: 90%; */
   flex: 1 1 auto;
-  height: 40px;
+  height: 50px;
   margin-left: 15px;
   /* margin-top: 5px; */
   background-color: transparent;
