--- a/src/page/main/mainPage.css
+++ b/src/page/main/mainPage.css
@@ -19,6 +19,22 @@ html{
     width:100%;
     height:100%;
 }
+
+/* 스크롤바 */
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    height: 30px;
+    background: #1E1F22;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(33, 122, 244, 0.1);
+}
+
 /* 라이브러리 */
 .row:after{
     display: block;
@@ -83,6 +99,7 @@ html{
     height:100%;
     /* position:absolute; */
     /* top:3%; */
+    display: flex;
 }
 .voice{
     width:17%;
@@ -248,4 +265,14 @@ html{
     margin-top: 4px;
     color: black;
     border: 1px solid #ccc;
+}
+
+.thread{
+    width: 500px;
+    height: 100%;
+    background-color: #313338;
+    position: relative;
+    /* border-radius: 3%; */
+    margin: 0 0 0 3px;
+    /* border-left: 1px solid #ccc; */
 }
