--- a/src/component/textchat/textChat.css
+++ b/src/component/textchat/textChat.css
@@ -77,37 +77,33 @@
 
 .msg-wrap-line{
   margin: 0 auto 0 auto;
-  width: 100%;
   border: 1px solid rgba(128, 128, 128, 0.2);
 }
 
 .msg-wrap{
-  width:99%;
-  margin-left: 10px;
   padding: 10px;
-  background-color: #383A40;
   z-index: 5;       /* 다른 요소들 위에 위치하도록 설정 */
   display: flex;
   flex-direction: column;  /* 세로 방향으로 배치 */
   justify-content: center;
-  border-radius: 10px;
 }
 
 .send-chat{
-    width:100%;
-    height:40%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    background-color:#383A40;
-    border-radius:8px;
+  background-color:#383A40;
+  border-radius:8px;
+}
+
+.send-chat-bar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .chat-text{
   /* width: 90%; */
   flex: 1 1 auto;
-  height: 40px;
+  height: 45px;
   margin-left: 15px;
   /* margin-top: 5px; */
   background-color: transparent;
@@ -131,13 +127,13 @@
   margin-left:5px;
 }
 
-.image-upload{
-  display: none;
-}
-
 .plus:hover{
   cursor: pointer;
-  background-color: white;
+  background-color: rgb(112, 112, 112);
+}
+
+.image-upload{
+  display: none;
 }
 
 .send{
