--- a/src/component/textchat/textChat.css
+++ b/src/component/textchat/textChat.css
@@ -14,24 +14,37 @@
   font-size: 0.8em;
 }
 
-.message.file-message img {
+.message-channel.file-message img {
   margin-top: 5px;
   max-width: 400px;
   border-radius: 10px;
 }
 
-.message.file-message img:hover {
+.message-channel.file-message img:hover {
   cursor: pointer;
+}
+
+.message-channel{
+  /* margin-left: 10px; */
+  margin: 20px 0 20px 10px;
 }
 
 .message{
   margin-left: 10px;
+  /* margin: 20px 0 20px 10px; */
 }
 
 .message-line{
   width: 99%;
+  /* margin-bottom: 10px; */
   margin: 20px 0 20px 0;
-  color: red;
+  border: 1px solid rgba(128, 128, 128, 0.2);
+}
+
+.message-line-push {
+  background-color: red;
+  margin-bottom: 20px;
+  margin-right: 10px;
   border: 1px solid rgba(128, 128, 128, 0.2);
 }
 
