--- a/src/component/videocall/VideoCall.css
+++ b/src/component/videocall/VideoCall.css
@@ -55,9 +55,17 @@ video {
   width: 100%;
 }
 
-#muteBtn{
+.muteBtn{
   background-color: rebeccapurple;
-  background-image: url('../../../public/images/media/headphone-on.svg');
+  background-image: url('../../../public/images/media/mic-off.svg');
+  background-size: 70px 45px;
+  width:70px;
+  height:45px;
+}
+
+.unmuteBtn{
+  background-color: rebeccapurple;
+  background-image: url('../../../public/images/media/mic-on.svg');
   background-size: 70px 45px;
   width:70px;
   height:45px;
