--- a/src/page/login/login.css
+++ b/src/page/login/login.css
@@ -164,6 +164,17 @@ img {
     color: black;
 }
 
+.kakao__login__button {
+    width: 100%;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    background-color: yellow;
+    font-weight: 500;
+    cursor: pointer;
+    margin-bottom: 2rem;
+    color: black;
+}
+
 .login__register {
     text-align: center;
 }
