--- a/src/component/textchat/textChat.css
+++ b/src/component/textchat/textChat.css
@@ -1,4 +1,4 @@
-#messages-list{
+#messages-list {
   overflow: auto;
   display: flex;
   flex-direction: column-reverse;
@@ -10,8 +10,37 @@
   /* width: 99%; */
 }
 
-.timestamp{
+.createdAt {
   font-size: 0.8em;
+  color: rgb(138, 138, 138);
+}
+
+.edited {
+  font-size: 0.8em;
+  color: grey;
+  margin-left: 10px;
+  position: relative;
+  cursor: pointer;
+}
+
+.modifiedAt {
+  visibility: hidden;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%;
+  /* Place above the text */
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+}
+
+.edited:hover .modifiedAt {
+  visibility: visible;
 }
 
 .message-channel.file-message img {
@@ -24,17 +53,17 @@
   cursor: pointer;
 }
 
-.message-channel{
+.message-channel {
   /* margin-left: 10px; */
   margin: 20px 0 20px 10px;
 }
 
-.message{
+.message {
   margin-left: 10px;
   /* margin: 20px 0 20px 10px; */
 }
 
-.message-line{
+.message-line {
   width: 99%;
   /* margin-bottom: 10px; */
   margin: 20px 0 20px 0;
@@ -48,24 +77,29 @@
   border: 1px solid rgba(128, 128, 128, 0.2);
 }
 
-.message-info{
+.message-info {
   display: flex;
   justify-content: space-between;
 }
 
-.message-info .right{
+.message-option {
+  display: flex;
+}
+
+.message-info .right {
   margin-right: 14px;
 }
 
-.right:hover{
+.right:hover {
   background-color: #4d4f55;
+  cursor: pointer;
 }
 
-.preview-img{
+.preview-img {
   margin-bottom: 10px;
 }
 
-.preview-img img{
+.preview-img img {
   margin: 10px 0 10px 10px;
   max-height: 200px;
   width: auto;
@@ -76,12 +110,12 @@
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.upload-error{
+.upload-error {
   margin-left: 7px;
   margin-bottom: 10px;
 }
 
-.img-delete-button{
+.img-delete-button {
   position: absolute;
   width: 24px;
   height: 30px;
@@ -90,45 +124,48 @@
   background-image: url('../../../public/images/media/trashcan.svg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #4d4f55; /* 버튼 배경을 투명하게 설정 */
+  background-color: #4d4f55;
+  /* 버튼 배경을 투명하게 설정 */
   border: none;
   cursor: pointer;
   fill: rgb(255, 0, 0);
 }
 
-.img-delete-button:hover{
+.img-delete-button:hover {
   opacity: 0.6;
   background-color: #4d4f55;
 }
 
-.msg-wrap-line{
+.msg-wrap-line {
   margin: 0 auto 0 auto;
   border: 1px solid rgba(128, 128, 128, 0.2);
 }
 
-.msg-wrap{
+.msg-wrap {
   padding: 0 10px;
   /* padding: 10px; */
-  z-index: 5;       /* 다른 요소들 위에 위치하도록 설정 */
+  z-index: 5;
+  /* 다른 요소들 위에 위치하도록 설정 */
   display: flex;
-  flex-direction: column;  /* 세로 방향으로 배치 */
+  flex-direction: column;
+  /* 세로 방향으로 배치 */
   justify-content: center;
   /* border-radius: 10px; */
 }
 
-.send-chat{
-    background-color:#383A40;
-    border-radius:8px;
+.send-chat {
+  background-color: #383A40;
+  border-radius: 8px;
 }
 
-.send-chat-bar{
+.send-chat-bar {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 }
 
-.chat-text{
+.chat-text {
   /* width: 90%; */
   flex: 1 1 auto;
   height: 45px;
@@ -138,38 +175,47 @@
   color: white;
 }
 
-.chat-text::placeholder{
+.modify-text {
+  padding-left: 10px;
+  width: 99%;
+  height: 45px;
+  background-color: #383A40;
+  color: white;
+  border-radius: 8px;
+}
+
+.chat-text::placeholder {
   color: rgb(184, 184, 184);
 }
 
-.plus{
-  width:30px;
-  height:30px;
+.plus {
+  width: 30px;
+  height: 30px;
   flex: 0 0 auto;
   position: relative;
   background-image: url('../../../public/images/media/plus.svg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius:20px;
-  margin-left:5px;
+  border-radius: 20px;
+  margin-left: 5px;
 }
 
-.plus:hover{
+.plus:hover {
   cursor: pointer;
   background-color: rgb(112, 112, 112);
 }
 
-.image-upload{
+.image-upload {
   display: none;
 }
 
-.send{
-  width:30px;
-  height:30px;
+.send {
+  width: 30px;
+  height: 30px;
   flex: 0 0 auto;
-  margin-left:10px;
-  margin-right:10px;
+  margin-left: 10px;
+  margin-right: 10px;
   background-image: url('../../../public/images/media/send.svg');
   background-size: contain;
   background-repeat: no-repeat;
@@ -177,7 +223,7 @@
 }
 
 /* 제출 버튼 */
-button{
+button {
   background-color: #007bff;
   color: #fff;
   border: none;
@@ -186,17 +232,17 @@ button{
   cursor: pointer;
 }
 
-button:hover{
+button:hover {
   background-color: #0056b3;
 }
 
-.typing-container{
+.typing-container {
   /* position: fixed; */
   bottom: 0;
   margin: 5px 0 0 15px;
-  
+
 }
 
-.typing-container p{
+.typing-container p {
   font-size: 0.9em;
 }
