--- a/src/page/main/mainPage.css
+++ b/src/page/main/mainPage.css
@@ -176,10 +176,15 @@ html{
     flex-direction: column;
     /* overflow: auto; */
 }
-.user-list{
+
+.user-list {
     width: 13%;
     height: 94%;
     background-color: #2B2D31;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 /* 라이브러리 만들어서 반복되는 코드 줄이기*/
@@ -265,4 +270,21 @@ html{
     /* border-radius: 3%; */
     margin: 0 0 0 3px;
     /* border-left: 1px solid #ccc; */
+}
+
+.space-user-name {
+    color: rgb(114, 114, 114); /* 텍스트 색상 */
+    font-weight: bold; /* 텍스트 굵게 */
+    font-size: 1.1rem; /* 폰트 크기 조정 */
+    padding: 5px 10px; /* 텍스트 주변에 패딩 추가 */
+    border-radius: 8px; /* 둥근 모서리 추가 */
+    transition: all 0.3s ease; /* 모든 변화를 부드럽게 전환 */
+    text-decoration: none; /* 텍스트 밑줄 제거 */
+}
+
+.space-user-name:hover {
+    color: white; /* 마우스 오버 시 텍스트 색상 변경 */
+    background-color: #007bff; /* 마우스 오버 시 배경 색상 변경 */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* 마우스 오버 시 약간의 그림자 추가 */
+    transform: translateY(-2px); /* 마우스 오버 시 텍스트가 살짝 위로 이동 */
 }
